# sdk-python

./: .gitignore  README.md  pyproject.toml
examples/: create_sample.py  parse_sample.py  python-sdk-demo.llmc
src/llmc_python/: __init__.py  parser.py
src/llmd_python/: __init__.py  parser.py  types.py  writer.py
tests/: test_basic.py
